# vibe-kanban

./: .gitignore  AGENTS.md  CLAUDE.md  DATABASE_PERFORMANCE_PLAN.md  ORCHESTRATOR.md  README.md  package.json  pnpm-lock.yaml  run-prod.sh  vibe-cli.py
.cargo/: config.toml
.sqlx/: query-0828a61b3aac0706d57626d288fe9056329f53c8bbc23d405f97780ef5779599.json  query-08e34e1618c0fa396fcb4d98b27c87810b1d1281d52463981910160257f60948.json  query-09d997b7b3dcc6bbea9b20c878795f6d13bac6f4f9064c457f2e4847a76214be.json  query-0b8f4a030c51a0910ac0b6c79965ec94a957a5d680d004aed4e56302c90f22a0.json  query-0cc11bb9acffabc6f173cdbaac3be4c84fb1f2802364ac996285b611cb83c3bf.json  query-121c09e88a8c2e973d3f1322f9b43b76d1c64507d413aae1cbf902fb134c62f3.json  query-18a4eb409f5d5ea419c98fabcfaa024126074d3b29202195c6e3b12a75c32338.json  query-196a97c709d226c23b957cc258c57f0d6cd35b1a6aeef879c7f6dfa89fc85539.json  query-1c652bb5d039cdcef8e5cc64e283771b6e49fdf3abea89652d2bc57dafd2c63d.json  query-2330097afa4816aaf7d98e083eac80558ecb9a355384e5076aa744fab27d2f7e.json  query-24fc0f4f51e4080aebf6131c47eb241ef5c35440b23cfa712311692143be53f3.json  query-290fb7c65611a73e2b3955383c5881d47b101ffec11415ea6824e390d478921f.json  query-2d49b016e3d5872a71d07525a9d15637c9799e8918f125058413028ecb931a5c.json  query-2d7347baa31214cd9d556c279546bc6625050021dc5b20c0b1f29d54caebf03f.json  query-32db0a6321ee8a93f0aa31e9b9e128e6e802873f557afa3331bededed403742c.json  query-3880c8745b172bec8e9f0477ee78339e157531a00dc63d73a31ce554f54e5ca6.json  query-3c370bbd5b58c1e5de1ca4799c7fe2b3202173a9211c2d1493d79d93493754a3.json  query-4c8cc854d7f9ff93fb86a5a1a99cb99c86c50e062281bf3e52e2ebc6537192f0.json  query-56eaca51977f005572a2205fd8e4b65c237aeae8407acf4fa2f0f317f760b2cd.json  query-68bdb061b646c0401bde9cf51ff29a99019471d371b87c920d2c647ab56aea57.json  query-6e553d3a71f3a3e33dd2418ac62babe4b75fc734a135cb45f5127a0411eeb89b.json  query-74c7ce5735a4ff8d4bc5e26ba813377a51489744268a69c6f088265ec1d6ebe5.json  query-89183bb8218a438295232aea9c596778a31a103958158d5404ee097de2255be8.json  query-90425cf084cfb13f9f6c0b5451451ec2c68c7c9a11ad6a7c422c29db014e27ae.json  query-907660cd05b8c9e6ba5198e973dc2baf1b895d4f21bf81ec06dbbbc122df6a38.json  query-929cd77c5aa8015af36aa70ef830d030788b96aaddcef73aed4e8c7d7d5dee46.json  query-96ac65e2406a0aced0ae388f970a1d804a3cd488852b00afde3814f11c9d4f6e.json  query-a225b1f2538d56812ca241b30a2dbd7d836da8b58567ef6a7ba44e77920cfd37.json  query-a6ee0cb1535be5f414429a26c1534afa3f859f87c291b33769049b922ab8ff86.json  query-ada2508575f7f5fd4b9159aa8690f44a84c07dbf28ba1d23fb1041b43f4ccc13.json  query-b170ff05e4526f2f97fe132c72a5433a29702e33074bd8c563d9a8eaa78cf9ad.json  query-b965523f671c1732b03c24c90f2a66f524e657af536c1e767e82011720e17a9f.json  (+5 more)
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: container.rs  copy.rs  lib.rs
crates/remote/: Cargo.toml  docker-compose.yml
crates/remote/.sqlx/: query-1a8fb6c222b7eb3077fba6a7722faa1af89e268a644e7e7237ae21b03221dc9b.json  query-338507619ddbadce5d40bc58a7d9eb95bbeee3ade4d5abb9140aefe5673ea071.json  query-3ba7efc786500c8a72dec5fb0f76b66da861b8ca8905080ef70a16943e97f004.json  query-4aaf14d8e25078fff3ceca2b2b1e2888403f398fba3048fbc582ec24c4c5dbf7.json  query-872d77e34d06bc036a07e9b2330166a2e0bedf34db5bceb3e6e576f1e07f6414.json  query-a0fef73e10f2f7bba67f740aef62e43fb8e4678833be58e361d7b90912fa9883.json  query-a6cd14c7038801714a4e89749e68f803dc9faf8bf3270e81a8d674be543999ec.json  query-af1c9ee18bd6dffa6e2b46959690ba0a1d1d545fea0b643e591b250a7160aa47.json  query-daa9b8b4b2d30296fc3c46fd25ba9e067577216bb58d6f75c6329ac7bcbb2fc8.json
crates/remote/bindings/: AssigneesQuery.ts  SharedTask.ts  SharedTaskResponse.ts  TaskStatus.ts  UserData.ts
crates/remote/src/: app.rs  config.rs  lib.rs  mail.rs  state.rs  validated_where.rs
crates/remote/src/auth/: handoff.rs
crates/remote/src/db/: mod.rs  organizations.rs  tasks.rs  users.rs
crates/remote/src/routes/: electric_proxy.rs  mod.rs  tasks.rs
crates/utils/: Cargo.toml
crates/utils/src/: assets.rs  lib.rs  path.rs  sentry.rs
docs/: type-generation.md  (+1 more)
(+350 files in other folders)
