[package]
name = "local-deployment"
version = "0.0.129"
edition = "2024"

[dependencies]
db = { path = "../db" }
executors = { path="../executors" }
deployment = { path = "../deployment" }
services = { path = "../services" }
utils = { path = "../utils" }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
nix = { version = "0.29", features = ["signal", "process"] }
openssl-sys = { workspace = true }
notify = "8.2.0"
notify-debouncer-full = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }
sentry = { version = "0.41.0", features = ["anyhow", "backtrace", "panic", "debug-images"] }
futures = "0.3"
json-patch = "2.0"
tokio = { workspace = true }
globwalk = "0.9"

[dev-dependencies]
tempfile = "3.8"
