[package]
name = "utils"
version = "0.0.126"
edition = "2024"

[dependencies]
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.0"
shlex = "1.3.0"
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
rust-embed = "8.2"
directories = "6.0.0"
open = "5.3.2"
regex = "1.11.1"
sentry = { version = "0.41.0", features = ["anyhow", "backtrace", "panic", "debug-images"] }
sentry-tracing = { version = "0.41.0", features = ["backtrace"] }
futures-util = "0.3"
json-patch = "2.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tokio = { workspace = true }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots", "url"] }
async-stream = "0.3"
shellexpand = "3.1.1"
which = "8.0.0"
similar = "2"
git2 = "0.18"
dirs = "5.0"
async-trait = { workspace = true }
thiserror = { workspace = true }
dashmap = "6.1"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "uuid", "chrono"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_System_Environment"] }
